--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "1.7.8",
+    "axios": "^0.27.2",
+    "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
@@ -24,7 +27,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "8.0.3",
     "vue-template-compiler": "^2.6.14"
   }
 }
